Refactored Strategy Pattern